force-app/main/default/objects/Subscription_Line_Item__c/Subscription_Line_Item__c.object-meta.xml
<CustomObject>
    <description>for customer subscription line items(child records of subscription)</description>
    <label>Subscription Line Item</label>
    <nameField>
        <displayFormat>SUB-ITEM-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>