force-app/main/default/objects/Subscription_Line_Item__c/fields/Class_Term__c.field-meta.xml
<CustomField>
    <fullName>Class_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It will help invoice engine to charge proper amount</description>
    <label>Class Term</label>
    <referenceTo>Class_Term__c</referenceTo>
    <relationshipLabel>Subscription Line Items</relationshipLabel>
    <relationshipName>Subscription_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>