force-app/main/default/objects/Subscription_Line_Item__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>to hold enrollment number</description>
    <label>Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Subscription Line Items</relationshipLabel>
    <relationshipName>Subscription_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>