force-app/main/default/objects/Subscription_Line_Item__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>to store parent fee detail if it is tution fee</description>
    <label>Fee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Fee__c.Type__c</field>
            <operation>equals</operation>
            <value>Tuition Fee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fee__c</referenceTo>
    <relationshipLabel>Subscription Line Items</relationshipLabel>
    <relationshipName>Subscription_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>