force-app/main/default/objects/Subscription_Line_Item__c/fields/Next_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Bill_Date__c</fullName>
    <description>to hold next bill date</description>
    <label>Next Bill Date</label>
    <type>Date</type>
</CustomField>