force-app/main/default/objects/Subscription_Line_Item__c/fields/Payment_Duration__c.field-meta.xml
<CustomField>
    <fullName>Payment_Duration__c</fullName>
    <description>to calculate next bill date</description>
    <label>Payment Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>