force-app/main/default/objects/Subscription_Line_Item__c/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <description>to store start date of subscription line item</description>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>